change arch position, team section - fix button size on mobile

--- a/src/components/sections/conferenceHighlights/ConferenceHighlightsBlocks.scss
+++ b/src/components/sections/conferenceHighlights/ConferenceHighlightsBlocks.scss
@@ -1,7 +1,7 @@
 .conference-text-block-w {
   color: var(--white);
   h4 {
-    color: var(--primary);
+    color: var(--primary) !important;
   }
 
   p {
