--- a/src/index.scss
+++ b/src/index.scss
@@ -119,7 +119,7 @@ h2 {
 .bg-dark ~ main h6,
 .bg-dark ~ main p,
 .bg-dark ~ main span {
-  color: var(--white) !important;
+  color: var(--white);
 }
 
 .container {
